# areweawaityet

./: .gitignore  LICENSE  README.md  delinkify.sh  netlify.toml
archive/: Cargo.toml
archive/src/: main.rs
archive/static/: await.css
src/: discourse.rs  reddit.rs  template.html
static/: await.css  await.js
www/: 404.html  await.css  fonts  index.html
